--- a/style.css
+++ b/style.css
@@ -15,3 +15,13 @@
 footer .row {
     margin-top: -20px;
 }
+
+@media only screen and (max-width: 600px) {
+    .first-item {
+        margin-left: 1px;
+    }
+    
+    .last-item {
+        margin-right: 0px;
+    }
+}
